[package]
name = "bplustree"
version = "0.1.0"
authors = ["André Guedes <andre.guedes@neoway.com.br>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Concurrent in-memory B+ Tree featuring optimistic lock coupling"
repository = "https://github.com/NeowayLabs/bplustree"

keywords = ["b-tree", "tree", "concurrent", "map"]
categories = ["concurrency", "data-structures"]

#[profile.release]
#debug = true

# [[bin]]
# path = "src/persistent/mod.rs"
# name = "persistent"

[[bench]]
name = "micro"
harness = false

[features]
deepdebug = []

[dependencies]
parking_lot = "0.12.1"
parking_lot_core = "0.9.9"
thiserror = "1.0.50"
crossbeam-epoch = "0.9.15"
smallvec = { version = "1.11.1", features = ["const_generics"]}


nix = {version ="0.27.1", features = ["mman", "uio"]}
crossbeam-queue = "0.3.8"
scc = "2.0.2"
once_cell = "1.18.0"
indexmap = "2.0.2"
io-uring = "0.6.2"
# libc = "0.2.98"
libc = "0.2.149"
core_affinity = "0.8.1"
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.5.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serial_test = "2.0.0"
quanta = "0.10.1"
