[package]
name = "bptree"
version = "0.1.0"
authors = ["André Guedes <andre.guedes@neoway.com.br>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Concurrent in-memory B+ Tree featuring optimistic lock coupling"
# repository = "https://github.com/NeowayLabs/bplustree"

keywords = ["b-tree", "tree", "concurrent", "map"]
categories = ["concurrency", "data-structures"]

[dependencies]
parking_lot = "0.12.1"
parking_lot_core = "0.9.9"
thiserror = "1.0.50"
crossbeam-epoch = "0.9.15"
# smallvec = { version = "1.6", features = ["const_generics"]}
smallvec = { version = "1.11.1", features = ["const_generics"]}

[dev-dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
#rand = "0.8"
rand = "0.8.5"
#serial_test = "0.5"
serial_test = "2.0.0"
